--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ main {
 }
 #about #headshot p:nth-child(1) {
   margin: 1% 0 0 0;
-  width: 50%;
+  width: auto;
   display: flex;
   align-items: flex-start;
 }
@@ -303,6 +303,13 @@ label:hover {
   margin: 10%;
 }
 
+@media screen and (max-width: 350px) {
+  p:nth-child(1) {
+    padding: 5% 0 0 0;
+    font-size: 12px;
+  }
+}
+
 @media screen and (max-width: 820px) {
   #right, #left {
     display: none;
@@ -320,6 +327,9 @@ label:hover {
   #content {
     flex-direction: column;
     align-items: center;
+  }
+  p:nth-child(1) {
+    padding: 1% 0 0 0;
   }
   p:nth-child(2) {
     width: clamp(80vw, 90%, 100%);
